デザインを調整

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div id="toolbar">
             <button id="penBtn" class="active">✏️ ペン</button>
             <button id="eraserBtn">🩹 消しゴム</button>
-            <button id="undoBtn">↩️ Undo</button>
-            <button id="clearBtn">🗑 クリア</button>
+            <button id="undoBtn">↩️ 取り消し</button>
+            <button id="clearBtn">🗑 全消し</button>
         </div>
 
         <div id="palette"></div>
